data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1813.wast
;; 4. **Test Description:** Implement a `call` instruction within a loop that uses `br_if` to conditionally exit. Ensure that the loop iterates correctly when the `br_if` condition is false, and returns to the start of the loop when conditionally breaking out.    - **Constraint:** Checks for the loop's backward jump to function properly.    - **Improper Handling:** Mismanagement of stack and control flow within loops with function calls.

(assert_invalid 
  (module 
    (func $test 
      (result i32) 
      (local i32) 
      (loop (result i32) 
        (call $dummy) 
        (br_if 1 (i32.const 0)) 
        (i32.const 42)
      ) 
      (i32.const 1)
    ) 
    (func $dummy) 
  ) 
  "type mismatch"
)